--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check": "biome check",
     "deploy": "npm run build && wrangler deploy",
     "post-cta-init": "npx create-db@latest --user-agent tanstack/tsrouter",
+    "prisma:generate": "dotenv -e .env.local -- prisma generate",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
@@ -25,7 +26,6 @@
     "@neondatabase/vite-plugin-postgres": "^0.5.0",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
-    "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
@@ -40,7 +40,6 @@
     "prisma": "^6.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.0.6",
     "vite-tsconfig-paths": "^6.0.2",
     "zod": "^4.1.11"
   },
@@ -54,9 +53,12 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.23",
     "dotenv": "^16.0.0",
     "dotenv-cli": "^10.0.0",
     "jsdom": "^27.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "tsx": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
